# snap-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
.github/workflows/scripts/: deploy.sh
api/: app.py  dependencies.py
api/core/: config.py  database.py
api/dependencies/: __init__.py  session.py  user.py
api/models/: user.py
api/routes/: auth.py  health_check.py  image_analysis.py  media.py
api/schemas/: requests.py  responses.py  token.py  user.py
api/services/: user.py
api/tests/: __init__.py  config.py  conftest.py  test_db.py
api/tests/models/: user.py
api/utils/: ai.py  exceptions.py  media.py  password.py  tokens.py
